--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,20 +1,47 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
+
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
 
+/* Colors */
+
+:root {
+  --background-color: 1D1D1D;
+  --main-text-color: C3073F;
+}
+
+body {
+
+}
+
+.main-container {
+  padding: 0px 150px;
+  background-color: #1D1D1D !important;
+}
+
+section {
+  height: 100vh;
+  width: 100%;
+  position: relative;
+  background-color: #1D1D1D;
+
+}
+
+/* Navbar */
 nav {
   display: flex;
   justify-content: space-around;
   align-items: center;
   min-height: 8vh;
-  background-color: rgb(187, 187, 242);
+  background-color: #1D1D1D;
   font-family: 'poppins', sans-serif;
 }
 
 .logo {
-  color: rgb(225, 226, 226);
+  color: #C3073F;
   text-transform: capitalize;
   letter-spacing: 5px;
   font-size: 20px;
@@ -51,41 +78,6 @@ nav {
   transition: all 0.3s ease;
 }
 
-@media screen and (max-width: 1024px) {
-  .nav-links {
-    width: 60%;
-  }
-}
-
-
-@media screen and (max-width: 768px) {
-
-  body {
-    overflow-x: hidden;
-  }
-
-  .nav-links {
-    position: absolute;
-    right: 0px;
-    height: 92vh;
-    top: 8vh;
-    background-color: rgb(187, 187, 242);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 50%;
-    transform: translateX(100%);
-    transition: transform 0.5s ease-in;
-  }
-
-  .nav-links li{
-    opacity: 0;
-  }
-
-  .burger {
-    display: block;
-  }
-}
 
 .nav-active {
   transform: translateX(0%);
@@ -111,4 +103,96 @@ nav {
 }
 .toggle .line3 {
   transform: rotate(45deg) translate(-5px, -6px);
+}
+
+/* Home Page */
+
+.home-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0px;
+}
+
+.links-section-left {
+  position: fixed;
+  width: 40px;
+  bottom: 0px;
+  left: 40px;
+  right: auto;
+  z-index: 10;
+  color: white;
+}
+.links-section-right {
+  width: 40px;
+  position: fixed;
+  bottom: 0px;
+  left: auto;
+  right: 40px;
+  z-index: 10;
+  color: white;
+}
+
+.social-links {
+  display: flex;
+  flex-direction: column;
+  -webkit-box-align: center;
+  align-items: center;
+  margin: 0px;
+  padding: 0px;
+  list-style: none;
+  color: white;
+}
+
+
+.social-links li a i {
+  font-size: 40px;
+  margin: 20px;
+  color: white;
+}
+
+.social-links::after {
+  content: "";
+  display: block;
+  width: 1px;
+  height: 90px;
+  margin: 0px auto;
+  background-color: white;
+}
+
+@media screen and (max-width: 1024px) {
+  .nav-links {
+    width: 60%;
+  }
+}
+
+
+@media screen and (max-width: 768px) {
+
+  body {
+    overflow-x: hidden;
+  }
+
+  .nav-links {
+    position: absolute;
+    right: 0px;
+    height: 92vh;
+    top: 8vh;
+    background-color:#6F2232;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 50%;
+    transform: translateX(100%);
+    transition: transform 0.5s ease-in;
+  }
+
+  .nav-links li{
+    opacity: 0;
+  }
+
+  .burger {
+    display: block;
+  }
 }
