--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,7 @@
 :root {
   --background-color: #1A1A1D;
   --main-text-color: rgb(244, 7, 78);
+  --light-gray-color: #CCD6F6;
 }
 
 body {
@@ -20,7 +21,7 @@ body {
 }
 
 .main-container {
-  padding: 0px 150px;
+  padding: 0px 100px;
   background-color: var(--background-color) !important;
 }
 
@@ -30,6 +31,17 @@ section {
   position: relative;
   background-color: var(--background-color);
 
+}
+
+/* Slide in animations */
+
+.hidden {
+  opacity: 0;
+  transition: all 1.5s;
+}
+
+.show {
+  opacity: 1;
 }
 
 /* Navbar */
@@ -60,7 +72,7 @@ nav {
 }
 
 .nav-links a {
-  color: #fff;
+  color: var(--light-gray-color);
   text-decoration: none;
   letter-spacing: 3px;
   font-weight: bold;
@@ -134,8 +146,12 @@ p {
 }
 
 .text {
-  color: rgb(199, 195, 195);
-  font-size: 17px;
+  color: var(--light-gray-color);
+  /* color: rgb(199, 195, 195); */
+  font-size: 14px;
+  letter-spacing: 0px !important;
+  line-height: 25px;
+  font-family: monospace;
 }
 
 .red-text {
@@ -156,9 +172,11 @@ p {
   justify-content: center;
   -webkit-box-align: center;
   align-items: flex-start;
-  min-height: 100vh;
-  height: 100vh;
+  flex-direction: column;
+  min-height: 80vh;
+  height: 80vh;
   padding: 0px;
+  margin-bottom: 10vh;
 }
 
 .links-section-left {
@@ -228,6 +246,67 @@ p {
 
 .home-btn:hover {
   background-color: rgb(244, 7, 78, .25);
+}
+
+
+/* About Section */
+
+#about {
+  padding: 100px 0px;
+  min-height: 120vh;
+  /* visibility: visible;
+  opacity: 1;
+  transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
+  transition: opacity 0.5s cubic-bezier(0.645, 0.045, 0.355, 1) 0.2s, transform 0.5s cubic-bezier(0.645, 0.045, 0.355, 1) 0.2s; */
+}
+
+.numbered-heading {
+  display: flex;
+  -webkit-box-align: center;
+  align-items: center;
+  position: relative;
+  margin: 10px 0px 40px;
+  width: 100%;
+  white-space: nowrap;
+  color: var(--main-text-color);
+  font-size: 30px; 
+}
+
+.numbered-heading::after {
+  content: "";
+  display: block;
+  position: relative;
+  top: 3px;
+  width: 300px;
+  height: 1px;
+  margin-left: 20px;
+  background-color: var(--main-text-color);
+  font-size: 30px; 
+
+}
+
+.numbered-heading::before {
+  position: relative;
+  bottom: 0px;
+  counter-increment: section 1;
+  content: "0" counter(section) ".";
+  margin-right: 10px;
+  color: var(--main-text-color);
+  font-weight: 400;
+  font-size: 30px; 
+}
+
+.profile-pic {
+  width: 100%;
+  height: 50%;
+  object-fit: cover;
+  transition: all 0.3s ease-in-out;
+  border-radius: 10px;
+
+}
+
+.profile-pic:hover {
+  transform: scale(1.1);
 }
 
 /* Media Queries */
