--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@
 
 :root {
   --background-color: #1A1A1D;
-  --main-text-color: rgb(244, 7, 78);
+  --main-text-color: #f4074e;
   --light-gray-color: #CCD6F6;
 }
 
@@ -284,13 +284,13 @@ p {
 
 .numbered-heading::before {
   position: relative;
-  bottom: 0px;
+  bottom: -3px;
   counter-increment: section 1;
-  content: "0" counter(section) ".";
+  content: "1" ".";
   margin-right: 10px;
   color: var(--main-text-color);
   font-weight: 400;
-  font-size: 30px; 
+  font-size: 20px; 
 }
 
 .profile-pic {
@@ -306,6 +306,41 @@ p {
   transform: scale(1.1);
 }
 
+/* Projects Page */
+
+#projects {
+  max-height: 100vh;
+}
+
+.projects-img {
+  width: 100%;
+  height: 25%;
+  object-fit: cover;
+}
+
+.vertical-line {
+  border-left: 1px solid green;
+  height: 200px;
+  position: absolute;
+  left: 30%;
+  margin-left: -3px;
+  top: 10;
+}
+
+.vertical-line::after {
+  content: "-";
+  display: block;
+  width: 1px;
+  height: 90px;
+  margin: 0px auto;
+  background-color: var(--main-text-color);
+}
+
+.project-text {
+  position: absolute;
+  top: 70%;
+  left: 40%;
+}
 /* Media Queries */
 
 @media screen and (max-width: 1024px) {
