--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,7 +26,6 @@ body {
 }
 
 section {
-  /* height: 100vh; */
   width: 100%;
   position: relative;
   background-color: var(--background-color);
@@ -142,7 +141,6 @@ p {
 .home-title {
   font-size: 85px;
   font-weight: 800;
-  /* color: var(--main-text-color); */
   color: #ccd6f6 !important;
   padding-top: 20px;
   margin: 0px;
@@ -150,14 +148,12 @@ p {
 
 .home-subtitle {
   font-size: 60px;
-  /* color: #C3073F; */
   font-weight: 600;
   color: #8892b0 !important;
 }
 
 .text {
   color: var(--light-gray-color);
-  /* color: rgb(199, 195, 195); */
   font-size: 14px;
   letter-spacing: 0px !important;
   line-height: 25px;
@@ -240,7 +236,13 @@ p {
   letter-spacing: 0.1em;
   -webkit-writing-mode: vertical-rl;
   writing-mode: vertical-rl;
-  color: var(--main-text-color)
+  color: var(--main-text-color);
+  transition: all 0.3s ease-in-out;
+}
+
+.email:hover {
+  transform: scale(1.1);
+  color: var(--light-gray-color) !important;
 }
 
 .home-btn {
@@ -259,10 +261,6 @@ p {
 
 
 /* About Section */
-
-#about {
-  /* min-height: 100vh; */
-}
 
 .numbered-heading {
   display: flex;
@@ -308,12 +306,14 @@ p {
   object-fit: cover;
   transition: all 0.3s ease-in-out;
   border-radius: 50%;
-
+  border: 2px solid var(--main-text-color)
 }
 
-.profile-pic:hover {
+
+
+/* .profile-pic:hover {
   transform: scale(1.1);
-}
+} */
 
 /* Projects Page */
 
@@ -336,7 +336,7 @@ p {
 
 .vertical-line {
   border-left: 2px solid rgb(80, 79, 79);
-  height: 2000px;
+  height: 2513px;
   position: absolute;
   left: 30%;
   margin-left: -3px;
@@ -359,12 +359,6 @@ p {
   right: 69.2%;
 }
 
-.proj-1-description {
-  width: 300px;
-  height: 300px;
-  padding: 0px 20px;
-}
-
 .fa-brands {
   color: var(--light-gray-color);
   font-size: 25px;
@@ -384,9 +378,27 @@ p {
   border-radius: 10px;
   font-size: 20px;
   padding: 5px;
-  text-decoration: none;
+  text-decoration: none; 
   background-color: rgb(244, 7, 78, .25);
   color: var(--bs-code-color)
+}
+
+.open-arrow {
+  color: var(--main-text-color);
+  padding: 5px 0px;
+  text-decoration: none;
+}
+
+.proj-link {
+  text-decoration: none;
+  color: var(--main-text-color);
+  margin-top: 30px;
+  font-weight: 900;
+}
+
+.links {
+  display: flex;
+  flex-direction: column;
 }
 
 /* Media Queries */
@@ -438,3 +450,133 @@ p {
     display: block;
   }
 }
+
+
+/* test */
+   
+
+/* .container {
+    background-color: rgb(252, 232, 143);
+    width: 100%;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+} */
+
+.test {
+  flex-direction: column;
+  width: 100%;
+  overflow: hidden;
+  display: flex;
+}
+
+
+.slide-wrapper {
+
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  overflow: hidden;
+  min-height: 200px;
+  width: 400vw;
+  padding: 2rem 1rem;
+  animation: slide 10s infinite linear;
+}
+
+.slide-wrapper:has(.slide:hover) .slide:not(:hover) {
+    animation: shrink 4s forwards;
+}
+
+.slide:hover {
+    animation: grow 4s forwards;
+}
+
+.slide {
+    height: fit-content;
+    padding: .75rem;
+    margin-right: 3rem;
+    border-radius: .25rem;
+    background-color: rgb(82, 0, 82);
+    border: 2px solid black;
+    box-shadow: 3px 3px 0px black;
+}
+
+.tool {
+  width: 100px;
+}
+
+.media-wrapper img {
+    width: 50px;
+    height: 50px;
+    padding: 1rem;
+    border-radius: .25rem;
+    background-color: rgb(255, 255, 255);
+    box-shadow: 3px 3px 0px black;
+}
+
+
+/* More Projects */
+
+.card-technologies {
+  font-size: 90%;
+  color: var(--main-text-color);
+  font-weight: 600;
+
+}
+
+.card {
+  border-radius: 4px;
+  background-color: #2b2e39 !important;
+  transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1) 0s, opacity 0.5s cubic-bezier(0.645, 0.045, 0.355, 1) 0.1s, transform 0.5s cubic-bezier(0.645, 0.045, 0.355, 1) 0.1s;
+}
+
+
+
+.card:hover {
+  transform: translateY(-7px);
+}
+
+.card-title {
+  color: var(--light-gray-color) !important;
+}
+
+.card-text {
+  color: #8892b0 !important;
+}
+
+.row-gap {
+  row-gap: 20px;
+}
+
+
+@keyframes slide {
+    0% {
+        transform: translateX(1%);
+    }
+    100% {
+        transform: translateX(-50%);
+    }
+}
+
+@keyframes shrink {
+    0% {
+        scale: 1;
+        filter: blur(0px);
+    }
+    100% {
+        scale: .75;
+        filter: blur(1px);
+    }
+}
+
+@keyframes grow {
+    0% {
+        scale: 1;
+    }
+    100% {
+        scale: 1.2;
+        box-shadow: 4px 4px 2px black;
+    }
+}
+
+
