--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -336,7 +336,7 @@ p {
 
 .vertical-line {
   border-left: 2px solid rgb(80, 79, 79);
-  height: 2513px;
+  height: 100%;
   position: absolute;
   left: 30%;
   margin-left: -3px;
@@ -365,9 +365,24 @@ p {
   margin-top: 20px;
   color: var(--main-text-color);
   transition: all 0.3s ease-in-out;
-
+  cursor: pointer;
+  margin: 0px;
 }
 .fa-brands:hover {
+  transform: scale(1.2);
+}
+
+.fa-solid {
+  color: var(--light-gray-color);
+  font-size: 25px;
+  margin-top: 20px;
+  color: var(--main-text-color);
+  transition: all 0.3s ease-in-out;
+  cursor: pointer;
+  margin: 0px 10px;
+}
+
+.fa-solid:hover {
   transform: scale(1.2);
 }
 
@@ -401,11 +416,82 @@ p {
   flex-direction: column;
 }
 
+/* More Projects */
+
+.card-technologies {
+  font-size: 90%;
+  color: var(--main-text-color);
+  font-weight: 600;
+
+}
+
+.card {
+  border-radius: 4px;
+  background-color: #2b2e39 !important;
+  transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1) 0s, opacity 0.5s cubic-bezier(0.645, 0.045, 0.355, 1) 0.1s, transform 0.5s cubic-bezier(0.645, 0.045, 0.355, 1) 0.1s;
+}
+
+
+
+.card:hover {
+  transform: translateY(-7px);
+}
+
+.card-title {
+  color: var(--light-gray-color) !important;
+}
+
+.card-text {
+  color: #8892b0 !important;
+}
+
+.row-gap {
+  row-gap: 20px;
+}
+
+/* Contact Me */
+
+.contact-title {
+  color: var(--main-text-color);
+}
+
+.contact-form {
+  text-align: center;
+}
+
+.email-link {
+  text-decoration: none;
+  color: var(--main-text-color);
+  border: 1px solid var(--main-text-color);
+  padding: 10px;
+  margin: 20px 0px;
+  border-radius: 5px;
+}
+
+.email-link:hover {
+  /* color: var(--light-gray-color) */
+  background-color: rgb(244, 7, 78, .25);
+  color: var(--light-gray-color);
+}
+
+
+/* Footer Links */
+
+.footer-links {
+  display: flex;
+  justify-content: space-around;
+}
+
+
 /* Media Queries */
 
 @media screen and (max-width: 1024px) {
   .nav-links {
     width: 60%;
+  }
+
+  .card-deck {
+    flex-wrap: wrap;
   }
 }
 
@@ -515,38 +601,7 @@ p {
 }
 
 
-/* More Projects */
 
-.card-technologies {
-  font-size: 90%;
-  color: var(--main-text-color);
-  font-weight: 600;
-
-}
-
-.card {
-  border-radius: 4px;
-  background-color: #2b2e39 !important;
-  transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1) 0s, opacity 0.5s cubic-bezier(0.645, 0.045, 0.355, 1) 0.1s, transform 0.5s cubic-bezier(0.645, 0.045, 0.355, 1) 0.1s;
-}
-
-
-
-.card:hover {
-  transform: translateY(-7px);
-}
-
-.card-title {
-  color: var(--light-gray-color) !important;
-}
-
-.card-text {
-  color: #8892b0 !important;
-}
-
-.row-gap {
-  row-gap: 20px;
-}
 
 
 @keyframes slide {
