--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,10 @@
   box-sizing: border-box;
 }
 
+body {
+  background-color: var(--background-color) !important;
+}
+
 /* Colors */
 
 :root {
@@ -68,6 +72,8 @@ nav {
   text-transform: capitalize;
   letter-spacing: 5px;
   font-size: 20px;
+  cursor: pointer;
+  text-decoration: none;
 }
 
 .nav-links {
@@ -179,8 +185,7 @@ p {
   -webkit-box-align: center;
   align-items: flex-start;
   flex-direction: column;
-  min-height: 80vh;
-  height: 80vh;
+  min-height: 90vh;
   padding: 0px;
 }
 
@@ -309,10 +314,15 @@ p {
   border: 2px solid var(--main-text-color)
 }
 
+.about-text {
+  height: 500px;
+  overflow: auto;
+}
+
 /* Projects Page */
 
 .projects-img {
-  width: 100%;
+  width: 80%;
   height: 500px;
   object-fit: cover;
   display: flex;
@@ -320,7 +330,7 @@ p {
 }
 
 .project-video {
-  width: 100%;
+  width: 80%;
   height: 500px;
   display: flex;
   margin: 0px auto;
@@ -379,9 +389,13 @@ p {
   transform: scale(1.2);
 }
 
+.tech-btns {
+  display: flex;
+  gap: 10px;
+  flex-wrap: wrap;
+}
+
 .tech-buttons {
-  width: 80px;
-  height: 60px;
   border: 1px solid white;
   border-radius: 10px;
   font-size: 20px;
@@ -484,6 +498,25 @@ p {
   }
 }
 
+@media screen and (max-width: 850px) {
+  .numbered-heading {
+    font-size: 20px;
+  }
+  .numbered-heading::after {
+    width: 200px;
+  }
+
+  .tech-buttons {
+    font-size: 15px;
+  }
+
+  .about-img {
+    display: flex;
+    align-items: center;
+    height: 100%;
+  }
+}
+
 
 @media screen and (max-width: 768px) {
 
@@ -523,5 +556,44 @@ p {
 
   .burger {
     display: block;
+  }
+
+  .profile-pic {
+    border-radius: 0%;
+  }
+}
+
+@media screen and (max-width: 578px) {
+  .home-title {
+    font-size: 60px;
+  }
+
+  .home-subtitle {
+    font-size: 40px;
+  }
+
+  .text {
+    font-size: 12px;
+  }
+
+  .numbered-heading {
+    font-size: 15px;
+  }
+  .numbered-heading::after {
+    width: 100px;
+  }
+
+  .tech-buttons {
+    font-size: 10px;
+  }
+
+  .row {
+    margin: 0px !important;
+    padding: 0px !important;
+  }
+
+  .col-12 {
+    margin: 0x !important;
+    padding: 0px !important;
   }
 }
