--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -426,9 +426,8 @@ p {
   border-radius: 5px;
   font-size: 20px;
   padding: 5px;
-  text-decoration: none; 
-  /* background-color: rgb(244, 7, 78, .25); */
-  /* color: var(--bs-code-color) */
+  text-decoration: none;
+  cursor: default;
 }
 
 .tech-buttons:nth-child(odd) {
