--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -289,6 +289,10 @@ p {
   background-color: rgb(204, 214, 246, .25);
 }
 
+.home-btns {
+  display: flex;
+}
+
 
 /* About Section */
 
@@ -471,6 +475,8 @@ p {
   border-radius: 4px;
   background-color: #2b2e39 !important;
   transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1) 0s, opacity 0.5s cubic-bezier(0.645, 0.045, 0.355, 1) 0.1s, transform 0.5s cubic-bezier(0.645, 0.045, 0.355, 1) 0.1s;
+  overflow: overlay !important;
+  height: 400px !important;
 }
 
 .card:hover {
@@ -483,10 +489,16 @@ p {
 
 .card-text {
   color: #8892b0 !important;
+  font-size: 15px;
+  letter-spacing: 0px;
 }
 
 .row-gap {
   row-gap: 20px;
+}
+
+.card-hr {
+  color: var(--light-gray-color);
 }
 
 /* Contact Me */
@@ -553,6 +565,10 @@ p {
     display: flex;
     align-items: center;
     height: 100%;
+  }
+
+  .card-title {
+    font-size: 20px;
   }
 }
 
@@ -634,5 +650,19 @@ p {
   .col-12 {
     margin: 0x !important;
     padding: 0px !important;
+  }
+
+  .home-btns {
+    flex-direction: column;
+    width: max-content;
+  }
+
+  .cv-btn {
+    margin: 0px;
+    width: 50%;
+  }
+
+  .home-btn {
+    margin: 20px 0px;
   }
 }
