--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -351,6 +351,44 @@ p {
 
 /* Projects Page */
 
+.project-title {
+  display: flex;
+  -webkit-box-align: center;
+  align-items: center;
+  position: relative;
+  margin: 10px 0px 40px;
+  width: 100%;
+  white-space: nowrap;
+  color: var(--main-text-color);
+  font-size: 30px; 
+  font-weight: 900;
+
+}
+
+.project-title::after {
+  content: "";
+  display: block;
+  position: relative;
+  top: 3px;
+  width: 300px;
+  height: 1px;
+  margin-left: 20px;
+  background-color: var(--main-text-color);
+  font-size: 30px; 
+
+}
+
+.project-title::before {
+  position: relative;
+  bottom: -3px;
+  counter-increment: section 1;
+  content: "1" ".";
+  margin-right: 10px;
+  color: var(--main-text-color);
+  font-weight: 400;
+  font-size: 20px; 
+}
+
 .projects-img {
   width: 80%;
   height: 500px;
@@ -379,10 +417,6 @@ p {
 .project-text {
   color: var(--light-gray-color);
   letter-spacing: 0px;
-}
-
-.project-title {
-  color: var(--main-text-color);
 }
 
 .arrow {
@@ -553,7 +587,16 @@ p {
   .numbered-heading {
     font-size: 20px;
   }
+
   .numbered-heading::after {
+    width: 200px;
+  }
+
+  .project-title {
+    font-size: 20px;
+  }
+
+  .project-title::after {
     width: 200px;
   }
 
