--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,6 +30,27 @@ section {
   background-color: var(--background-color);
 }
 
+/* PRELOADER */
+#preloader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+  height: 100%;
+  width: 100%;
+  text-align: center;
+  color: #f4dec5;
+  background-color: #050505;
+  transition: opacity 1s ease-in-out;
+}
+
+#loader {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 /* Scroll Wheel */
 
 body::-webkit-scrollbar {
